AUX_SOURCE_DIRECTORY(. TEST_SRC)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
                    
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
                 
ADD_EXECUTABLE(TestHttpd ${TEST_SRC})
TARGET_LINK_LIBRARIES(TestHttpd libhttpdlite)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/test)